@@ -1,5 +1,7 @@
 2.2.13
 
+ *) Log when invoking and restoring the restart backoff policy.
+
  *) [WIN32] Prevent intermittent ReadFile() failures (properly initialize the
     OVERLAPPED structure). 
 
